2014-03-03  Timothy Hatcher  <timothy@apple.com>

        Remove an innocuous error message and support default views for Resource and Debugger sidebars.

        https://bugs.webkit.org/show_bug.cgi?id=129622

        Reviewed by Joseph Pecoraro.

        * UserInterface/Views/DebuggerSidebarPanel.js:
        (WebInspector.DebuggerSidebarPanel.prototype.showDefaultContentView): Added.
        * UserInterface/Views/ResourceSidebarPanel.js:
        (WebInspector.ResourceSidebarPanel.prototype.showDefaultContentView): Added.
        (WebInspector.ResourceSidebarPanel.prototype.treeElementForRepresentedObject): Don't log an error
        if the tree element isn't a Script. We try to find any represented object, and it can fail.

2014-03-03  Timothy Hatcher  <timothy@apple.com>

        Fix an exception caused by trying to access the DOM before it is loaded.

        https://bugs.webkit.org/show_bug.cgi?id=129617

        Reviewed by Andreas Kling.

        * UserInterface/Base/Main.js:
        (WebInspector.loaded): Move global event listeners from here...
        (WebInspector.contentLoaded): ... to here.

2014-03-01  Timothy Hatcher  <timothy@apple.com>

        Make Start Timeline Recording in the Develop menu show the Timeline view again.

        This also fixes a noticeable delay between showing the sidebar and the default Timeline
        view when initially opening the Web Inspector to the Timeline.

        https://bugs.webkit.org/show_bug.cgi?id=129545

        Reviewed by Joseph Pecoraro.

        * UserInterface/Base/Main.js:
        (WebInspector.contentLoaded): Call TimelineSidebarPanel.initialize to prime the content view.
        This is needed so the view is ready in this run loop cycle, where it was delayed before.
        * UserInterface/Protocol/InspectorFrontendAPI.js:
        (InspectorFrontendAPI.setTimelineProfilingEnabled): Call TimelineSidebarPanel.showTimelineOverview.
        * UserInterface/Views/TimelineSidebarPanel.js: