@@ -1,5 +1,17 @@
 2014-03-03  Timothy Hatcher  <timothy@apple.com>
 
+        Don't try to parse legacy CSS gradients -- we don't support them.
+
+        https://bugs.webkit.org/show_bug.cgi?id=129623
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Models/Gradient.js:
+        (WebInspector.Gradient.stopsWithComponents): Fix a possible exception on malformed stops.
+        (WebInspector.LinearGradient.linearGradientWithComponents): Return early for legacy gradients.
+
+2014-03-03  Timothy Hatcher  <timothy@apple.com>
+
         Remove an innocuous error message and support default views for Resource and Debugger sidebars.
 
         https://bugs.webkit.org/show_bug.cgi?id=129622
